# rims-dashboard

./: .dockerignore  .env.db  .env.db-sample  .env.dev-sample  .env.prod-sample  .env.prod.db-sample  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  app.py  build_docker.sh  dash_app.py  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  explore.ipynb  instruments_app.py  requirements.txt  run_docker.sh  setup.cfg  user_app.py
.secrets/: db_name.txt.sample
backend/: .dockerignore  .gitignore  .python-version  Dockerfile  Dockerfile.dev  Dockerfile.prod  postgres-dev.sh  setup.cfg
backend/conf/: rimsdash.conf.example
backend/rimsboard/: collate.py  config.py  flask_app.py  logic.py  main.py  manager.py  rims.py  statelogic.py  statsgather.py  usergather.py  utils.py  visualisations.py
backend/rimsboard/db/: database.py
backend/rimsboard/routers/: general.py
backend/rimsdash/: collate.py  config.py  debugging.py  flask_app.py  listops.py  main.py  manager.py  rims.py  statelogic.py  statsgather.py  usergather.py  utils.py  visualisations.py
backend/rimsdash/collate/: __init__.py  logic.py  processing.py
backend/rimsdash/crud/: __init__.py  account_crud.py  base_crud.py  project_crud.py  project_state_crud.py  projectaccount_crud.py  projectusers_crud.py  request_crud.py  sync_crud.py  system_crud.py  system_user_rights_crud.py  systemuser_crud.py  trequest_crud.py  user_crud.py  user_state_crud.py
backend/rimsdash/db/: __init__.py  base.py  base_class.py  crud.py  database.py  depr_base_class.py  depr_check.py  depr_schemas.py  init_db.py  models.py  schemas.py  session.py
backend/rimsdash/models/: __init__.py  account_models.py  base_model.py  project_models.py  project_result_models.py  project_state_models.py  projectaccount_models.py  projectusers_models.py  request_models.py  sync_models.py  system_models.py  system_rights_models.py  system_user_rights_models.py  systemuser_models.py  trequest_models.py  user_models.py  user_state_models.py
backend/rimsdash/repository/: __init__.py  project_repo.py
backend/rimsdash/rims/: __init__.py  queries.py  translate.py  translator.py
backend/rimsdash/routers/: __init__.py  admin.py  admin_panel.py  general.py  manual_sync.py  navbar.py  projects.py  sync.py  training_requests.py  unsecured.py  update.py
backend/rimsdash/schemas/: __init__.py  account_schema.py  base_schema.py  project_schema.py  project_state_schema.py  projectaccount_schema.py  projectusers_schema.py  request_schema.py  sync_schema.py  system_schema.py  system_user_rights_schema.py  systemuser_schema.py  trequest_schema.py  user_schema.py  user_state_schema.py  userproject_schema.py  util_schema.py
backend/rimsdash/service/: __init__.py  generate.py  logic.py  processing.py  security.py
backend/rimsdash/service/access/: __init__.py  sync_access.py
backend/rimsdash/service/sync/: __init__.py  batch.py  control.py  master.py  persist.py  processing.py  sequential.py  utils.py
backend/rimsdash/utils/: keycloak.py  utils.py
backend/rimsdash/v1/: analytics.py  collate.py  flask_app.py  logic.py  usergather.py  visualisations.py
backend/tests/: test_indicator_states.py
backend/tests/test_external/test_rims/: test_clean.py
conf/: rimsdash.conf.example
dash/: .python-version  Dockerfile  setup.cfg
dash/conf/: rimsdash.conf.example
dash/dashboard/: auth.py  config.py  dash_app.py
dash/notebooks/: explore.ipynb
data/: avocado-updated-2020.csv
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.compose  Dockerfile.dev  lightboards.py  package-lock.json  package.json  user_app.py  vue.config.js
ingress/: Dockerfile
k8s/: backend-deployment.yaml  backend-service.yaml  db-deployment.yaml  db-service.yaml  frontend-deployment.yaml  frontend-service.yaml  rimsdash-vol.yaml
nginx/: nginx.conf
notebooks/: explore.ipynb  scratch.ipynb
rimsdash/: Dockerfile  (+12 more)
(+78 files in other folders)
