[metadata]
name = rimsdash
version = 0.1.0

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy==1.24.3
    pandas==2.0.2
    dash==2.10.2
    dash-bootstrap-components==1.4.1
    dash-daq==0.5.0
    plotly==5.15.0
    matplotlib==3.7.1
    jupyterlab==4.0.2
    tables==3.8.0
    gunicorn==20.1.0
    seaborn==0.12.2
zip_safe = True
include_package_data = True

[options.extras_require]
dev = 
    black==22.1.0
    flake8==4.0.1

[options.entry_points]
console_scripts = 
    rimsdash-debug = frontend.user_app:entry_debug

[options.package_data]
config = conf/rimsdash.conf
example = data/*.h5
* = README.md

















