[metadata]
name = rimsboard
version = 0.1.0

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy==1.24.3
    pandas==2.0.2
    plotly==5.15.0
    matplotlib==3.7.1
    jupyterlab==4.0.2
    tables==3.8.0
    seaborn==0.12.2
    psycopg2-binary==2.9.7
    pytest==7.4.1
    fastapi==0.104.0
    fastapi-utils==0.2.1
    uvicorn==0.23.2
zip_safe = True
include_package_data = True

[options.extras_require]
dev = 
    black==22.1.0
    flake8==4.0.1

[options.entry_points]
console_scripts = 
    rimsboard-dev = rimsboard.flask_app:entry_dev

[options.package_data]
config = conf/rimsboard.conf
* = README.md

















