[metadata]
name = rimsdash
version = 0.1.0

[options]
packages = find:
python_requires = >=3.10
install_requires =
    dash==2.10.2
    dash-bootstrap-components==1.4.1
    dash-daq==0.5.0
    dash-auth==2.0.0
    plotly==5.15.0
    jupyterlab==4.0.2
    gunicorn==20.1.0
zip_safe = True
include_package_data = True

[options.extras_require]
dev = 
    black==22.1.0
    flake8==4.0.1

[options.entry_points]
console_scripts = 
    rimsdash-dev = dashboard.dash_app:entry_dev

[options.package_data]
config = conf/dashboard.conf
* = README.md

















